--- a/tex/2014/3/13.tex
+++ b/tex/2014/3/13.tex
@@ -67,14 +67,14 @@
           \]
           and evaluating this at \(t = 1\) gives
           \[
-              \mu = G'(1) = \frac{ac}{(1 - b - c)^2} = \frac{ac}(a^2) = \frac{c}{a}.
+              \mu = G'(1) = \frac{ac}{(1 - b - c)^2} = \frac{ac}{a^2} = \frac{c}{a}.
           \]
 
           Therefore, we have \(c = \mu a\)
           \begin{align*}
               \Prob(N = n) & = \frac{a c^k}{(a + c)^{k + 1}}                   \\
                            & = \frac{a (\mu a)^k}{(a + \mu a)^{k + 1}}         \\
-                           & = \frac{a \mu^k a^k}(a^{k + 1} (1 + \mu)^{k + 1}) \\
+                           & = \frac{a \mu^k a^k}{a^{k + 1} (1 + \mu)^{k + 1}} \\
                            & = \frac{\mu^k}{\mu^{k + 1}},
           \end{align*}
           as desired.
