--- a/tex/2014/3/5.tex
+++ b/tex/2014/3/5.tex
@@ -40,8 +40,8 @@ as desired.
           as desired.
     \item Similarly, we have
           \begin{align*}
-              y & = \frac{(1 + i)q + (1 - i)r}{2},
-              z & = \frac{(1 + i)r + (1 - i)s}{2},
+              y & = \frac{(1 + i)q + (1 - i)r}{2}, \\
+              z & = \frac{(1 + i)r + (1 - i)s}{2}, \\
               t & = \frac{(1 + i)s + (1 - i)t}{2}.
           \end{align*}
 
